<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.6</version>
		<relativePath />
	</parent>
	<groupId>com.smarthouseholdaccountbook</groupId>
	<artifactId>backend</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>backend</name>
	<description>Backend of SmartHouseholdAccountBook</description>
	<url />
	<licenses>
		<license />
	</licenses>
	<developers>
		<developer />
	</developers>
	<scm>
		<connection />
		<developerConnection />
		<tag />
		<url />
	</scm>

	<!-- ========================================
	     プロパティ設定
	     ======================================== -->
	<properties>
		<!-- Javaバージョン-->
		<java.version>25</java.version>
		<!-- OSV: tomcat-embed-core 11.0.21 の既知 CVE 対策。4.0.7 以降の parent に上げたら削除可 -->
		<tomcat.version>11.0.22</tomcat.version>
		<!-- OpenAPI仕様ファイルのパス -->
		<openapi.file>../openapi/openapi.yaml</openapi.file>
	</properties>

	<!-- ========================================
	     依存関係
	     ======================================== -->
	<dependencies>
		<!-- ========================================
		     Spring Boot Core
		     Web API とデータベースアクセス（JPA）の基本機能
		     ======================================== -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-restclient</artifactId>
		</dependency>

		<!-- ========================================
		     Security
		     認証・認可機能（Spring Security、OAuth2、JWT）
		     ======================================== -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
		</dependency>
		<!-- ========================================
		     Database
		     本番環境用（MySQL）とテスト用（H2）
		     ======================================== -->
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- Flyway: Boot 4 では専用スターターが必須。 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-flyway</artifactId>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-mysql</artifactId>
		</dependency>

		<!-- ========================================
		     Validation
		     入力値検証機能
		     ======================================== -->
		<dependency>
			<groupId>jakarta.validation</groupId>
			<artifactId>jakarta.validation-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<!-- ========================================
		     Cache
		     Caffeineを使用したキャッシュ機能
		     ======================================== -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>
		<dependency>
			<groupId>com.github.ben-manes.caffeine</groupId>
			<artifactId>caffeine</artifactId>
		</dependency>

		<!-- ========================================
		     Actuator
		     ヘルスチェック等の監視機能
		     ======================================== -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<!-- ========================================
		     Resilience4j
		     レート制限・Retry・Circuit Breaker
		     ======================================== -->
		<dependency>
			<groupId>io.github.resilience4j</groupId>
			<artifactId>resilience4j-spring-boot4</artifactId>
			<version>2.4.0</version>
		</dependency>

		<!-- ========================================
		     OpenAPI Generator（ビルド時）
		     生成モデルの JsonNullable サポート
		     ======================================== -->
		<dependency>
			<groupId>org.openapitools</groupId>
			<artifactId>jackson-databind-nullable</artifactId>
			<version>0.2.10</version>
		</dependency>

		<!-- ========================================
		     開発ツール
		     ボイラープレートコード削減（Lombok）
		     ホットリロード機能（DevTools）
		     ======================================== -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<!-- compile時のみ必要だが実行時には不要 -->
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<!-- 実行時のみ必要、optional=trueで本番ビルド時には除外される -->
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<!-- ========================================
		     テスト関連
		     ユニットテストとセキュリティテスト
		     ======================================== -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- Boot 4: @WithMockUser 等は security-test スターター経由が推奨 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<!-- ========================================
	     プロファイル設定
	     環境ごとに異なる設定を管理
	     ======================================== -->
	<profiles>
		<profile>
			<!-- backendフォルダ下でのmvnコマンド実行時に使用 -->
			<id>local</id>
			<properties>
				<openapi.file>../openapi/openapi.yaml</openapi.file>
			</properties>
		</profile>
		<profile>
			<!-- docker-compose.yamlでのmvnコマンド実行時に使用 -->
			<id>docker</id>
			<properties>
				<openapi.file>openapi/openapi.yaml</openapi.file>
			</properties>
		</profile>
	</profiles>

	<!-- ========================================
	     ビルド設定
	     ======================================== -->
	<build>
		<!-- Docker / ローカルで成果物パスを固定（target/app.jar） -->
		<finalName>app</finalName>
		<!-- ========================================
		     Cursor（m2e）との統合設定
		     m2eにOpenAPI Generatorを無視するよう指示
		     ======================================== -->
		
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.openapitools</groupId>
										<artifactId>openapi-generator-maven-plugin</artifactId>
										<versionRange>[7.0.0,)</versionRange>
										<goals>
											<goal>generate</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<!-- Cursor（m2e）の自動ビルド時は実行しない -->
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

		<!-- ========================================
		     ビルドプラグイン
		     ======================================== -->
		<plugins>
			<!-- ========================================
			     OpenAPI Generator
			     OpenAPI仕様書からAPIインターフェースとモデルクラスを自動生成
			     ======================================== -->
			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
				<version>7.22.0</version>
				<executions>
					<execution>
						<id>generate-spring</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<inputSpec>${openapi.file}</inputSpec>
							<generatorName>spring</generatorName>
							<output>${project.build.directory}/generated-sources/openapi</output>
							<apiPackage>com.smarthouseholdaccountbook.backend.generated.api</apiPackage>
							<modelPackage>com.smarthouseholdaccountbook.backend.generated.model</modelPackage>
							<configOptions>
								<!-- インターフェースのみ生成（実装クラスは生成しない） -->
								<interfaceOnly>true</interfaceOnly>
								<!-- SpringDoc 未使用のため Swagger アノテーションは生成しない -->
								<documentationProvider>none</documentationProvider>
								<annotationLibrary>none</annotationLibrary>
								<!-- タグを使用してAPIをグループ化 -->
								<useTags>true</useTags>
								<dateLibrary>java8</dateLibrary>
								<useJakartaEe>true</useJakartaEe>
								<!-- Spring Boot 4 + Jackson 3（アプリ本体と一致） -->
								<useSpringBoot4>true</useSpringBoot4>
								<useJackson3>true</useJackson3>
							</configOptions>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- ========================================
			     Build Helper
			     自動生成されたソースコードをビルドパスに追加
			     ======================================== -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<!-- OpenAPI Generatorで生成されたソースを追加 -->
								<source>${project.build.directory}/generated-sources/openapi/src/main/java</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- ========================================
			     Spring Boot Maven Plugin
			     Spring Bootアプリケーションの起動と実行可能JARの作成
			     ======================================== -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<mainClass>com.smarthouseholdaccountbook.backend.BackendApplication</mainClass>
				</configuration>
			</plugin>

			<!-- Java 25 で Lombok のアノテーションプロセッサを確実に有効化 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>

			<!-- ========================================
			     JaCoCo
			     テストカバレッジの測定とレポート生成
			     ======================================== -->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.14</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>